--- a/main.tex
+++ b/main.tex
@@ -18,15 +18,20 @@
 
 \newpage
 
-\section{Introduction}
+\include{./pages/0_introduction.tex}
+    
+
+\newpage
+
+
 
 \section{Conception et recherches}
     \subsection{Game design}
     \subsection{Planification}
-    \subsection{recherche documentaire}
+    \subsection{Recherche documentaire}
 
 \section{Developement}
-    \subsection{génération de la carte}
+    \include{./pages/generation_carte.tex}
     
     \subsection{moteur de jeu}
         \subsubsection{ecs}
