partie génération procedurale

--- a/main.tex
+++ b/main.tex
@@ -27,8 +27,10 @@
 
 \section{Conception et recherches}
     \subsection{Game design}
-    \subsection{Planification}
+    
+    \include{./pages/planification.tex}
     \subsection{Recherche documentaire}
+
 
 \section{Developement}
     \include{./pages/generation_carte.tex}
