--- a/pages/0_introduction.tex
+++ b/pages/0_introduction.tex
@@ -1,10 +1,17 @@
 \section{Introduction}
         L'objectif de ce projet est de réaliser un jeu vidéo massivement multijoueur sur navigateur. Celui ci se joue de deux façons bien distinctes :
         \begin{itemize}
-            \item \textit{Mode "Péon"} : Le joueur contrôle un personnage et s'occupe des actions élémentaires telles que récupérer des ressources, construire des bâtiments, etc.
+            \item \textit{Mode "Péon"} : Le joueur contrôle un personnage et s'occupe des actions élémentaires telles que récupérer des ressources, construire des bâtiments, etc.. Ces cations seronts fait a traves des mini-jeux simples.
             \item \textit{Mode "Seigneur"} : Le joueur ne contrôle pas de personnage directement, mais a une vision plus globale et donne des ordres aux péons en fonction des besoins du royaume.
         \end{itemize}
         Il y aurait plusieurs royaumes gérés par des seigneurs différents, en concurrence pour devenir le royaume le plus puissant. L'idée est inspirée de la "pixel war", l'événement temporaire sur r/place de Reddit où tous les utilisateurs du site pouvaient dessiner sur une page blanche. Ce principe très simple avait créé des dynamiques de groupes autour de communautés d'Internet et de streamers notamment qui voulaient leur place sur ce tableau géant, et nous avions assisté à des guerres d'alliances et des trahisons. Là où le but de la pixel war était purement esthétique, notre jeu serait plus concurrentiel. L'objectif de notre projet est de recréer ces dynamiques de groupes dans les royaumes.
+
+
+        \\
+
+        \textcolor{orange}{// Image Pixelwar (commentée) ca prend du temps a compiler}
+
+        \\
 
         %image pixelwar (long a charger)
         %\begin{figure}[!h]
@@ -13,3 +20,21 @@
         %    \caption{Image finale de r/Place}
         %    \label{fig:enter-label}
         %\end{figure}
+
+        Ce projet peut se suffire a lui même mais il est fait en collaboration avec un autre groupe de TER qui a crée un Backend scallable pour accueillir des applications comme la notre. Nous allons donc lier nos projets pour déployer notre frontend sur leur backend.
+
+
+        Les défis que nous avons identifiés avant le debut du developement sont les suivants:
+        \begin{itemize}
+            \item Générer une carte procéduralement avec ressources.
+            \item Choisir la bonne technologie pour faire tourner le projet sur un navigateur.
+            \item Créer un moteur de jeu simple.
+            \item Comment créer une interface utilisateur.
+            \item Créer les minijeux.
+            \item Créer et équilibrer les 2 façons de jouer différents.
+            \item Gérer la communication avec le Backend.
+            \item Créer (ou trouver) des assets.
+        \end{itemize}
+
+
+        \textcolor{red}{        trouver une problématique}
