ajout recherche documentaire autobiomes

--- a/main.tex
+++ b/main.tex
@@ -29,19 +29,23 @@
     \subsection{Game design}
     
     \include{./pages/planification.tex}
-    \subsection{Recherche documentaire}
+    
+        \include{./pages/RechercheDocumentaire.tex}
+        
 
 
-\section{Developement}
+\section{Développement}
     \include{./pages/generation_carte.tex}
     
     \subsection{moteur de jeu}
         \subsubsection{ecs}
-        \subsubsection{camera}
+        \subsubsection{3C}
 
     \subsection{Interface}
+
+    \subsection{Assets}
     
-    \subsection{Developement gameplay}
+    \subsection{Développement gameplay}
         \subsubsection{Mode "péon"}
         \subsubsection{Mini-jeux}
         \subsubsection{Mode "seigneur"}
