--- a/pages/generation_carte.tex
+++ b/pages/generation_carte.tex
@@ -66,7 +66,7 @@
 \begin{figure}[!h]
     \centering
     \begin{subfigure}{0.4\linewidth}
-        \centeringimage
+        \centering
         \includegraphics[width=\linewidth]{images/grille.png}
         \caption{Grille avant la perturbation}
         \label{fig:image_avant_expansion}
