--- a/main.tex
+++ b/main.tex
@@ -45,10 +45,9 @@
 
     \subsection{Assets}
     
-    \subsection{Développement gameplay}
-        \subsubsection{Mode "péon"}
-        \subsubsection{Mini-jeux}
-        \subsubsection{Mode "seigneur"}
+    
+    \include{./pages/gameplay.tex}
+        
         
     \subsection{communication avec le backend}
 
