--- a/pages/RechercheDocumentaire.tex
+++ b/pages/RechercheDocumentaire.tex
@@ -6,7 +6,7 @@
     \paragraph{Approche proposée pour la génération procédurale de terrains}
     Les auteurs présentent un système de génération procédurale de terrain combinant trois types d’approches : synthétique, physique et exemple-based (basée sur des exemples). L’objectif est de créer des paysages étendus, composés de différents biomes et peuplés de nombreux éléments.
     
-    Le système repose sur un pipeline, structuré en quatre étapes principales. Chaque étape peut être visualisée directement, ce qui améliore la facilité d’utilisation.Chaque étape est placée sur une grille comme présenté dans le figure ci dessous. Ce design offre un bon compromis entre les exigences souvent opposées : performance, réalisme, flexibilité et convivialité. Voici les différentes étapes de ce pipeline:
+    Le système repose sur un pipeline, structuré en quatre étapes principales. Chaque étape peut être visualisée directement, ce qui améliore la facilité d’utilisation.Chaque étape est placée sur une grille comme présenté dans le figure ci dessous. Ce design offre un bon compromis entre les exigences souvent opposées : performance, réalisme, flexibilité. Voici les différentes étapes de ce pipeline:
 
     \begin{figure}[!h]
     \centering
