--- a/pages/generation_carte.tex
+++ b/pages/generation_carte.tex
@@ -92,4 +92,4 @@ Les triangles violets représentent les positions des ressources.
     \label{fig:enter-label}
 \end{figure}
 
-Il suffira de re-exécuter ce code le même nombre de fois que de ressources.
+Il suffira de re-exécuter ce code le même nombre de fois que de ressources. Les emplacements des ressources sont enregistrés dans un fichier csv qui pourra être lu par le moteur de jeu.
