--- a/header.tex
+++ b/header.tex
@@ -14,6 +14,7 @@
 \usepackage{graphicx} % Required for inserting images
 \usepackage{subcaption} % Pour gérer les sous-figures
 
+\usepackage[backref=true]{biblatex}
 
 \usepackage{xcolor} % colour customisation, extends to tables with {colortbl}
 \definecolor{astral}{RGB}{46,116,181}
