--- a/main.tex
+++ b/main.tex
@@ -24,24 +24,21 @@
 \newpage
 
 
-
 \section{Conception et recherches}
-    \subsection{Game design}
     
     \include{./pages/planification.tex}
     
-        \include{./pages/RechercheDocumentaire.tex}
-        
+    \include{./pages/RechercheDocumentaire.tex}
 
-
-\section{Développement}
+    \include{pages/developpement}
+    
     \include{./pages/generation_carte.tex}
     
     \include{pages/engine}
 
-    \subsection{Interface}
+    \include{pages/interface}
 
-    \subsection{Assets}
+    \include{pages/assets}
     
     
     \include{./pages/gameplay.tex}
@@ -50,5 +47,6 @@
     \subsection{communication avec le backend}
 
 \section{Conclusion}
+
 
 \end{document}
